Add HTTP protocol

--- a/documentation/Dokumentacja_Projektu.tex
+++ b/documentation/Dokumentacja_Projektu.tex
@@ -27,7 +27,7 @@
 \textbf{Technologie:} Express, MongoDB, Neo4j, React, Redux, Sockets, TailwindCSS, TypeScript, WebRTC
 \\
 \\
-\textbf{Protokoły:} UDP, ICE, SDP
+\textbf{Protokoły:} HTTP, UDP, ICE, SDP
 \\
 \\
 \textbf{Repozytorium GitHub:}
