Fix search system formatting

--- a/documentation/Dokumentacja_Projektu.tex
+++ b/documentation/Dokumentacja_Projektu.tex
@@ -178,7 +178,12 @@ wcześniej podane w rejestracji.
 
 \newpage
 \subsection{System szukania znajomych}
-Wyszukiwanie znajomych odbywa się na endpointcie \url{http://localhost:5173/search}. Po wpisaniu w pasek wyszukiwania danej frazy i zatwierdzeniu jest pokazywane 10 pierwszych wyników, które są najbardziej zbliżone do tej frazy na podstawie imienia i nazwiska. W celu wyszukiwania podobieństwa jest wykorzystywany własny algorytm oparty o algorytmie Odległości Levenshteina. Każda osoba na liście zawiera przycisk informujący relację z danym kontaktem.
+Wyszukiwanie znajomych odbywa się na endpointcie \url{http://localhost:5173/search}.
+Po wpisaniu w pasek wyszukiwania danej frazy i zatwierdzeniu jest pokazywane
+10 pierwszych wyników, które są najbardziej zbliżone do tej frazy
+na podstawie imienia i nazwiska. W celu wyszukiwania podobieństwa jest wykorzystywany
+własny algorytm oparty o algorytmie odległości Levenshteina.
+Każda osoba na liście zawiera przycisk informujący relację z danym kontaktem.
 
 \begin{figure}[h]
     \centering
